--- a/students.html
+++ b/students.html
@@ -6,7 +6,7 @@
     <title>Software Dev Students</title>
 </head>
 <body>
-    <table>
+    <table border="1" cellspacing="5">
         <caption>Software Dev Students' List</caption>
         <thead>
             <tr>
